fixed header overlay, fixed footer and header spacing while shrinking, fixed footer background coverage

--- a/css/destinations.css
+++ b/css/destinations.css
@@ -18,6 +18,7 @@
   position: sticky;
   top: 0;
   left: 0;
+  z-index: 2;
   padding: 1.25rem 6.25rem;
 }
 
@@ -149,7 +150,6 @@
 .footer__info-container {
   display: flex;
   align-items: flex-end;
-  height: 3.4rem;
 }
 
 .footer__item-info {
@@ -170,6 +170,9 @@
 /***** responsive ******/
 @media (max-width: 1250px) {
   /*footer*/
+  .footer__container {
+    align-items: flex-start;
+  }
   .footer__info-container {
     flex-direction: column;
     align-items: flex-start;
@@ -189,11 +192,16 @@
     flex-direction: column;
   }
   .destination__package-card {
-    width: 35%;
+    width: 40%;
     min-height: 35rem;
     max-height: 50rem;
     min-width: 20rem;
     max-width: 35rem;
+  }
+
+  .destination__package-item {
+    padding: 1.5rem;
+    margin: 1.5rem auto;
   }
 }
 
@@ -201,18 +209,19 @@
   /*header*/
   .header {
     flex-direction: column;
-    padding: 1.25rem 4rem;
+    padding: 1.25rem 2rem;
   }
   .navbar {
     flex-direction: column;
     align-items: flex-start;
-    margin: 1rem 0;
+    margin: 0;
   }
   .navbar li {
-    margin: 1.25rem 0;
+    margin: 0.5rem 0;
   }
   .navbar__link {
     margin: 0;
+    padding: 0.4rem;
   }
 
   /*footer*/
@@ -222,10 +231,22 @@
   }
   .footer__item-container {
     flex-direction: column;
+    margin: 0.5rem;
   }
   .footer__info-container {
     display: flex;
     flex-direction: row;
+  }
+  .footer__item-container > .title2 {
+    margin: 0.5rem 0;
+  }
+  /* destination card*/
+  .destination__package-card {
+    width: 50%;
+    min-height: 35rem;
+    max-height: 50rem;
+    min-width: 20rem;
+    max-width: 35rem;
   }
 }
 
@@ -242,7 +263,7 @@
     margin: 2rem;
   }
   .destination__package-card {
-    width: 50%;
+    width: 60%;
     min-height: 35rem;
     max-height: 50rem;
     min-width: 20rem;
